# zommoros_demo

./: .gitignore  README.md  pyproject.toml
tests/: test_zommoros.py
zommoros/: __init__.py  __main__.py  config.py
zommoros/database/: __init__.py  init_orator.py  orator.py
zommoros/database/migrations/: 2020_11_30_035825_create_orders_table.py  2020_11_30_104950_create_live_infos_table.py  2020_12_03_070115_create_test_infos_table.py  2021_03_21_064948_create_test_details_table.py  2021_03_21_065014_create_live_details_table.py  2021_03_21_110724_create_run_lists_table.py  2021_07_07_115343_create_hists_table.py
zommoros/database/models/: __init__.py  hist.py  live_detail.py  live_info.py  order.py  run_list.py  test_detail.py  test_info.py
zommoros/recipe/: __init__.py
zommoros/recipe/ccxtbt/: ccxtbroker.py  ccxtfeed.py  ccxtstore.py
zommoros/recipe/commission_schemes/: __init__.py  comminfo_binance.py  comminfo_okex.py
zommoros/recipe/data_feeds/: __init__.py  mysql_feed.py
zommoros/recipe/indicators/: __init__.py  atratio.py  bbi.py  bias.py
zommoros/recipe/kline_pattern/: __init__.py  brake.py  hammer.py  midzen.py
zommoros/recipe/strategies/: bias_strategy.py  macd_strategy.py  mere_strategy.py  test_strategy.py  trading_view_strategy.py  trend_strategy.py
zommoros/utils/: alert.py  datetime_util.py  fetch_kline_pattern.py  fetch_signals.py  log.py  math_util.py  record.py  retry.py
